# mcp-streamlit-app

./: .gitignore  README.md  main.py  pyproject.toml
mcp-client/: streamlit_app.py
mcp-server/deep_research/: create_agent.py  deep_research.py
mcp_client/: client.py  client_st.py  streamlit_app.py
mcp_server/deep_research/: .env.example  create_agent.py  deep_research.py
mcp_server/weather/: weather.py
