[project]
name = "mcp-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49.0",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "mammoth>=1.9.0",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.6.0",
    "pathvalidate>=3.2.3",
    "pdfminer-six>=20250327",
    "pillow>=11.1.0",
    "puremagic>=1.28",
    "pydub>=0.25.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.3",
    "serpapi>=0.1.5",
    "smolagents[litellm]>=1.12.0",
    "speechrecognition>=3.14.2",
    "streamlit>=1.44.0",
    "transformers>=4.50.3",
    "youtube-transcript-api>=1.0.3",
]
